--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,12 @@
       "js": "always", "json": "always"
     }]
   },
+  "import/resolver": {
+    "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "moduleDirectory": ["node_modules", "src/"]
+    }
+  },
   "ignorePatterns": [
     "dist/",
     "build/"
